--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,21 @@
   <classpathentry kind="src" path="src"/>
   <classpathentry kind="src" path="test"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="lib" path="lib/avalon-framework-4.1.3.jar"/>
   <classpathentry kind="lib" path="lib/clojure-1.3.0.jar"/>
+  <classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
+  <classpathentry kind="lib" path="lib/docjure-1.6.0-SNAPSHOT.jar"/>
+  <classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+  <classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.jar"/>
+  <classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
+  <classpathentry kind="lib" path="lib/logkit-1.0.1.jar"/>
+  <classpathentry kind="lib" path="lib/poi-3.6.jar"/>
+  <classpathentry kind="lib" path="lib/poi-ooxml-3.6.jar"/>
+  <classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.6.jar"/>
+  <classpathentry kind="lib" path="lib/servlet-api-2.3.jar"/>
   <classpathentry kind="lib" path="lib/standalone-1.3.0-alpha4.jar"/>
+  <classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+  <classpathentry kind="lib" path="lib/xml-apis-1.0.b2.jar"/>
+  <classpathentry kind="lib" path="lib/xmlbeans-2.3.0.jar"/>
   <classpathentry kind="output" path="classes"/>
 </classpath>
