--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
   <classpathentry kind="src" path="test"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="lib" path="lib/avalon-framework-4.1.3.jar"/>
+  <classpathentry kind="lib" path="lib/cljgui-1.0.0-SNAPSHOT.jar"/>
   <classpathentry kind="lib" path="lib/clojure-1.4.0.jar"/>
   <classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
   <classpathentry kind="lib" path="lib/docjure-1.6.0-SNAPSHOT.jar"/>
