--- a/.classpath
+++ b/.classpath
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
   <classpathentry kind="src" path="src"/>
+  <classpathentry kind="lib" path="C:\Users\tom\workspacenew\marathon\target\classes"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\clojure\contrib\standalone\1.3.0-alpha4\standalone-1.3.0-alpha4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\javax\servlet\servlet-api\2.3\servlet-api-2.3.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\apache\poi\poi\3.6\poi-3.6.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\apache\xmlbeans\xmlbeans\2.3.0\xmlbeans-2.3.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\apache\geronimo\specs\geronimo-stax-api_1.0_spec\1.0\geronimo-stax-api_1.0_spec-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\logkit\logkit\1.0.1\logkit-1.0.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\commons-logging\commons-logging\1.1\commons-logging-1.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\avalon-framework\avalon-framework\4.1.3\avalon-framework-4.1.3.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\dom4j\dom4j\1.6.1\dom4j-1.6.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\cljgui\cljgui\1.0.0-SNAPSHOT\cljgui-1.0.0-SNAPSHOT.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\clojure\clojure\1.4.0\clojure-1.4.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\apache\poi\poi-ooxml-schemas\3.6\poi-ooxml-schemas-3.6.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\log4j\log4j\1.2.13\log4j-1.2.13.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\dk\ative\docjure\1.6.0-SNAPSHOT\docjure-1.6.0-SNAPSHOT.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\stax\stax-api\1.0.1\stax-api-1.0.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\xml-apis\xml-apis\1.0.b2\xml-apis-1.0.b2.jar"/>
+  <classpathentry kind="lib" path="C:\Users\tom\.m2\repository\org\apache\poi\poi-ooxml\3.6\poi-ooxml-3.6.jar"/>
   <classpathentry kind="src" path="test"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="lib" path="lib/avalon-framework-4.1.3.jar"/>
-  <classpathentry kind="lib" path="lib/cljgui-1.0.0-SNAPSHOT.jar"/>
-  <classpathentry kind="lib" path="lib/clojure-1.4.0.jar"/>
-  <classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
-  <classpathentry kind="lib" path="lib/docjure-1.6.0-SNAPSHOT.jar"/>
-  <classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
-  <classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.jar"/>
-  <classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
-  <classpathentry kind="lib" path="lib/logkit-1.0.1.jar"/>
-  <classpathentry kind="lib" path="lib/poi-3.6.jar"/>
-  <classpathentry kind="lib" path="lib/poi-ooxml-3.6.jar"/>
-  <classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.6.jar"/>
-  <classpathentry kind="lib" path="lib/servlet-api-2.3.jar"/>
-  <classpathentry kind="lib" path="lib/standalone-1.3.0-alpha4.jar"/>
-  <classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
-  <classpathentry kind="lib" path="lib/xml-apis-1.0.b2.jar"/>
-  <classpathentry kind="lib" path="lib/xmlbeans-2.3.0.jar"/>
-  <classpathentry kind="output" path="classes"/>
+  <classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
+  <classpathentry kind="output" path="target/classes"/>
 </classpath>
